<resources>
    <string name="app_name">Lean On Me</string>

    <!-- Activity names -->
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_research">Research</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_journal">JournalActivity</string>

    <!-- Menu related strings -->
    <string name="logout_setting">Logout</string>
    <string name="about_setting">About</string>
    <string name="register_setting">Register</string>
    <string name="fetch_config_setting">Fetch configs</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Extra for registering -->
    <string name="prompt_fname">First name</string>
    <string name="prompt_lname">Last name</string>
    <string name="prompt_number">Phone number</string>
    <string name="prompt_password_confirm">Confirm password (Must match above)</string>
    <string name="action_register">Register</string>
    <string name="auth_failed">Authentication failed</string>
</resources>
